--- a/lib/countries/data/subdivisions/GB.yaml
+++ b/lib/countries/data/subdivisions/GB.yaml
@@ -2800,7 +2800,9 @@ ERW:
     max_longitude: -4.2187585
   name: East Renfrewshire
 ERY:
-  unofficial_names: East Riding of Yorkshire
+  unofficial_names:
+    - East Riding of Yorkshire
+    - East Yorkshire
   translations:
     en: East Riding of Yorkshire
     af: Oos-Yorkshire
